Bug 121594 - [GTK] accessibility/self-referencing-aria-labelledby.html is failing
Summary: [GTK] accessibility/self-referencing-aria-labelledby.html is failing
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKitGTK (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: Gtk, LayoutTestFailure
Depends on:
Blocks: 98347
  Show dependency treegraph
 
Reported: 2013-09-19 00:47 PDT by Zan Dobersek
Modified: 2013-10-23 05:11 PDT (History)
10 users (show)

See Also:


Attachments
proposed patch (3.81 KB, patch)
2013-10-22 07:06 PDT, Krzysztof Wolanski
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Zan Dobersek 2013-09-19 00:47:24 PDT
The accessibility/self-referencing-aria-labelledby.html layout test is failing since being added in r155601.
http://trac.webkit.org/changeset/155601

http://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=accessibility%2Fself-referencing-aria-labelledby.html

Diff:
--- /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/accessibility/self-referencing-aria-labelledby-expected.txt
+++ /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/accessibility/self-referencing-aria-labelledby-actual.txt
@@ -6,9 +6,9 @@
 
 PASS test.description is 'AXDescription: X Y Z'
 PASS test.description is 'AXDescription: X Y Z'
-PASS test.description is 'AXDescription: X Y Z'
-PASS test.description is 'AXDescription: X Y Z'
-PASS test.description is 'AXDescription: X Y Z'
+FAIL test.description should be AXDescription: X Y Z. Was AXDescription: X.
+FAIL test.description should be AXDescription: X Y Z. Was AXDescription: ?.
+FAIL test.description should be AXDescription: X Y Z. Was AXDescription: ?.
 PASS test.description is 'AXDescription: X Y Z'
 PASS test.description is 'AXDescription: X Y Z'
 PASS successfullyParsed is true
Comment 1 Krzysztof Wolanski 2013-10-22 07:06:44 PDT
Created attachment 214854 [details]
proposed patch
Comment 2 Mario Sanchez Prada 2013-10-23 04:48:11 PDT
Comment on attachment 214854 [details]
proposed patch

looks good
Comment 3 WebKit Commit Bot 2013-10-23 05:11:42 PDT
Comment on attachment 214854 [details]
proposed patch

Clearing flags on attachment: 214854

Committed r157857: <http://trac.webkit.org/changeset/157857>
Comment 4 WebKit Commit Bot 2013-10-23 05:11:46 PDT
All reviewed patches have been landed.  Closing bug.