[GTK] accessibility/self-referencing-aria-labelledby.html is failing https://bugs.webkit.org/show_bug.cgi?id=121594

Patch by Krzysztof Wolanski <k.wolanski@samsung.com> on 2013-10-23
Reviewed by Mario Sanchez Prada.

Source/WebCore:

According to http://www.w3.org/TR/REC-html40/struct/objects.html#edef-IMG
description of image element should be determined by alt attribute, then
if it is empty by title attributte.

* accessibility/atk/WebKitAccessibleWrapperAtk.cpp:
(webkitAccessibleGetDescription):

LayoutTests:

* platform/efl/TestExpectations:
accessibility/self-referencing-aria-labelledby.html is now passing
* platform/gtk/TestExpectations:
accessibility/self-referencing-aria-labelledby.html is now passing

Canonical link: https://commits.webkit.org/141300@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157857 268f45cc-cd09-0410-ab3c-d52691b4dbfc